# chatbot-tester

./: .gitignore  Dockerfile  README.md  evaluation_report.md  example.md  pyproject.toml
src/ai_assistant_tester/: app.py  evaluation_report.md  prompts.py  utils.py
src/ai_assistant_tester/assistant_manager/: AssistantManager.py
src/ai_assistant_tester/conversation_tester/: AssistantEvaluator.py  AssistantTestSession.py
src/ai_assistant_tester/knowledge_base/: KnowledgeBaseFormatter.py  knowledge_base_parser.py  question_generator.py
src/ai_assistant_tester/knowledge_base/outputs/: eg-zine-pages-dev.md  egzine.md  example.md  knowledge_base.md
src/ai_assistant_tester/scraping/: WebCrawler.py
src/ai_assistant_tester/utils/: constants.py  utils.py
