[tool.poetry]
name = "ai-assistant-tester"
version = "0.1.0"
description = ""
authors = ["GrzegorzSzczepanek <grzegorzszczepanek48@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_assistant_tester", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "3.1.0"
openai = "1.72.0"
black = "25.1.0"
bs4 = "0.0.2"
requests = "2.32.3"
tiktoken = "0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
black = "25.1.0"
isort = "6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
